# Crawl4AIDemo

./: README.md  client.py  deploy.amber  deploy.sh  deploy_client.amber  deploy_client.sh  docker-compose.yml  pyproject.toml  server.py  server.spec  sgrid.yml
conf/: __init__.py  conf.py  keepalive.py  logger.py  logger_client.py
proto/: craw.proto  craw_pb2.py  craw_pb2_grpc.py  math.proto  math_pb2.py  math_pb2_grpc.py
service/: __init__.py  craw.py  funcs.py
